<resources>
    <string name="app_name">Academic Info</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot password</string>
    <string name="course">Course</string>
    <string name="mark">Mark</string>
    <string name="credits">Credits</string>
    <string name="media">Media</string>
    <string name="semester">Semester</string>
</resources>
